--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   event-set__4="_event: mouseleave; scale: 1 1 1"
                   show-manifesto="on: click">
         </a-entity>
-        <a-animation attribute="rotation" fill="forwards" easing="linear" dur="100000" from="0 0 0" to="0 -360 0" repeat="indefinite"></a-animation>
+        <a-animation attribute="rotation" fill="forwards" easing="linear" dur="100000" from="0 -720 0" to="0 -360 0" repeat="indefinite"></a-animation>
       </a-entity>
       <a-curvedimage src="#manifesto1" height="5" radius="3" theta-length="72" position="0 0 0"
                  rotation="0 100 0" scale="20 20 20" alpha-test="0.5">
@@ -58,5 +58,8 @@
         </a-entity>
       </a-entity>
     </a-scene>
+    <div id="splash">
+      <div class="loading"><img src="images/venncursor.png"></div>
+    </div>
   </body>
 </html>
